config/k8s/suit-int.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: suit-app
  namespace: portal-int
spec:
  selector:
    matchLabels:
      app: suit-app
  replicas: 2 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: suit-app
    spec:
      nodeSelector:
        environment: portal-int
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "portal"
        effect: "NoSchedule"
      securityContext:
        runAsUser: 101
        fsGroup: 101
      containers:
      - name: suit-app
        image: ipac/suit:lsst-dev
        imagePullPolicy: Always
        resources:
          limits:
            memory: "24Gi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /firefly/workarea
          name: firefly-workarea
        - mountPath: /firefly/config
          name: firefly-config
      volumes:
      - name: firefly-workarea
        hostPath:
          path: /sui/firefly/workarea
          type: Directory
      - name: firefly-config
        hostPath:
          path: /sui/firefly/config
          type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: suit-app
  namespace: portal-int
spec:
  selector:
    app: suit-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080 # the port that this service should serve on
    targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: suit-app
  namespace: portal-int
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://lsst-lsp-int.ncsa.illinois.edu/auth?capability=exec:portal"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-Uid, X-Auth-Request-Token
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-body-size: "0m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "24k"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "24k"
    nginx.ingress.kubernetes.io/rewrite-target: /suit
    nginx.ingress.kubernetes.io/proxy-redirect-from: ~^(http[s]?://[^/]+)/suit/(.+)$
    nginx.ingress.kubernetes.io/proxy-redirect-to: $1/portal/app/$2
    nginx.ingress.kubernetes.io/proxy-cookie-path: /suit /portal/app
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Original-URI $request_uri;
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header X-Forwarded-Port 443;
      proxy_set_header X-Forwarded-Path /portal/app;
      error_page 403 = "https://lsst-lsp-int.ncsa.illinois.edu/oauth2/start?rd=$request_uri";
spec:
  tls:
  - hosts:
    - lsst-lsp-int.ncsa.illinois.edu
    secretName: tls-certificate-lsp-int
  rules:
  - host: lsst-lsp-int.ncsa.illinois.edu
    http:
      paths:
      - path: "/portal/app"
        backend:
          serviceName: suit-app
          servicePort: 8080

---

apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: redis-srv
  namespace: portal-int
spec:
  selector:
    matchLabels:
      app: redis-srv
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: redis-srv
    spec:
      nodeSelector:
        environment: portal-int
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "portal"
          effect: "NoSchedule"
      securityContext:
        runAsUser: 101
        fsGroup: 101
      containers:
        - name: redis-srv
          image: redis:5
          imagePullPolicy: Always
          resources:
            limits:
              memory: "20Mi"
          ports:
            - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: redis-srv
  namespace: portal-int
spec:
  selector:
    app: redis-srv
  type: NodePort
  ports:
    - protocol: TCP
      port: 6379 # the port that this service should serve on
      targetPort: 6379
