config/k8s/suit-stable.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: suit
  namespace: portal-stable
spec:
  selector:
    matchLabels:
      app: suit
  replicas: 2 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: suit
    spec:
      nodeSelector:
        environment: portal-stable
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "portal"
        effect: "NoSchedule"
      securityContext:
        runAsUser: 101
        fsGroup: 101
      containers:
      - name: suit
        image: ipac/suit:lsst-stable
        imagePullPolicy: Always
        resources:
          limits:
            memory: "24Gi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /firefly/workarea
          name: firefly-workarea
        - mountPath: /firefly/config
          name: firefly-config
      volumes:
      - name: firefly-workarea
        hostPath:
          path: /sui/firefly/workarea
          type: Directory
      - name: firefly-config
        hostPath:
          path: /sui/firefly/config
          type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: suit
  namespace: portal-stable
spec:
  selector:
    app: suit
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080 # the port that this service should serve on
    targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: suit
  namespace: portal-stable
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-body-size: "0m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "24k"
    nginx.ingress.kubernetes.io/rewrite-target: /suit
    nginx.ingress.kubernetes.io/proxy-redirect-from: ~^(http[s]?://[^/]+)/suit/(.+)$
    nginx.ingress.kubernetes.io/proxy-redirect-to: $1/portal/app/$2
    nginx.ingress.kubernetes.io/proxy-cookie-path: /suit /portal/app
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Original-URI $request_uri;
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header X-Forwarded-Port 443;
      proxy_set_header X-Forwarded-Path /portal/app;
      error_page 403 = "https://lsst-lsp-stable.ncsa.illinois.edu/oauth2/start?rd=$request_uri";
spec:
  tls:
  - hosts:
    - lsst-lsp-stable.ncsa.illinois.edu
    secretName: tls-certificate-lsp-stable
  rules:
  - host: lsst-lsp-stable.ncsa.illinois.edu
    http:
      paths:
      - path: "/portal/app"
        backend:
          serviceName: suit
          servicePort: 8080
